[package]
name = "kestd-ronin"
version = "0.1.0"
authors = ["msi <support@kerbogames.com>"]
edition = "2018"

[lib]
name = "ronin"
path = "src/lib.rs"

[[bin]]
name = "kestd"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.124", features = ["derive"] }
serde_yaml = "0.8.17"
smallvec = "1.6.1"
glfw = "0.41.0"
sysinfo = "0.16.4"
log = "0.4.14"
simple_logger = "1.11.0"
num_cpus = "1.13.0"
lifeguard = "0.6.1"
bumpalo = "3.6.1"