[package]
name = "kestd-ronin"
version = "0.1.0"
authors = ["msi <support@kerbogames.com>"]
edition = "2018"

[lib]
name = "ronin"
path = "src/lib.rs"

[[bin]]
name = "kestd"
path = "src/bin.rs"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
serde = { version = "1.0.124", features = ["derive"] }
serde_yaml = "0.8.17"
smallvec = "1.6.1"
glfw = "0.41.0"
sysinfo = "0.16.4"
log = "0.4.14"
fern = { version = "0.6.0", features = ["colored"] }
num_cpus = "1.13.0"
lifeguard = "0.6.1"
bumpalo = "3.6.1"
rayon = "1.5.0"
indicatif = {version = "0.15.0", features = ["rayon"] }
futures = "0.3.13"
wgpu = "0.7.0"
cgmath = "0.18.0"
chrono = "0.4.19"
mimalloc = "0.1.25"
humantime = "2.1.0"
msgbox = "0.6.0"
lazy_static = "1.4.0"
raw-window-handle = "0.3.3"
bytemuck = "1.5.1"
image = "0.23.14"
obj-rs = "0.6.2"
specs = { version = "0.16.1", features = ["parallel", "serde"] }
specs-derive = "0.4.1"